--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
             color: #00ff41;
             font-family: 'Orbitron', monospace;
             font-size: 16px;
-            opacity: 0.6;
+            opacity: 0.15;
             animation: matrixRain 12s infinite linear;
             user-select: none;
-            text-shadow: 0 0 10px #00ff41;
+            text-shadow: 0 0 3px #00ff41;
         }
 
         @keyframes matrixRain {
@@ -132,8 +132,8 @@
             font-weight: 900;
             margin-bottom: 1rem;
             color: #00ff41;
-            text-shadow: 0 0 20px #00ff41, 0 0 40px #00ff41;
-            animation: textGlow 2s ease-in-out infinite alternate;
+            text-shadow: 0 0 10px #00ff41, 0 0 20px #00ff41;
+            animation: textGlow 3s ease-in-out infinite alternate;
         }
 
         .hero h2 {
@@ -157,10 +157,10 @@
 
         @keyframes textGlow {
             from { 
-                text-shadow: 0 0 20px #00ff41, 0 0 40px #00ff41;
+                text-shadow: 0 0 10px #00ff41, 0 0 20px #00ff41;
             }
             to { 
-                text-shadow: 0 0 30px #00ff41, 0 0 60px #00ff41, 0 0 80px #00ff41;
+                text-shadow: 0 0 15px #00ff41, 0 0 30px #00ff41, 0 0 40px #00ff41;
             }
         }
 
@@ -259,9 +259,12 @@
         /* Proyectos Grid */
         .projects-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            grid-template-columns: repeat(2, 1fr);
             gap: 2rem;
             margin-top: 2rem;
+            max-width: 800px;
+            margin-left: auto;
+            margin-right: auto;
         }
 
         .project-card {
@@ -360,8 +363,11 @@
         /* Skills Grid */
         .skills-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            grid-template-columns: repeat(2, 1fr);
             gap: 2rem;
+            max-width: 800px;
+            margin-left: auto;
+            margin-right: auto;
         }
 
         .skill-category {
