--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             scroll-behavior: smooth;
         }
 
-        /* Partículas binarias y símbolos */
+        /* Partículas binarias y símbolos - MÁS TRANSPARENTES */
         .particles {
             position: fixed;
             top: 0;
@@ -37,10 +37,10 @@
             color: #00ff41;
             font-family: 'Orbitron', monospace;
             font-size: 16px;
-            opacity: 0.60;
+            opacity: 0.15; /* Reducido de 0.60 a 0.15 para más transparencia */
             animation: matrixRain 12s infinite linear;
             user-select: none;
-            text-shadow: 0 0 3px #00ff41;
+            text-shadow: 0 0 2px #00ff41; /* Reducido el brillo */
         }
 
         @keyframes matrixRain {
@@ -49,10 +49,10 @@
                 opacity: 0;
             }
             10% {
-                opacity: 0.8;
+                opacity: 0.2; /* Reducido de 0.8 a 0.2 */
             }
             90% {
-                opacity: 0.8;
+                opacity: 0.2; /* Reducido de 0.8 a 0.2 */
             }
             100% {
                 transform: translateY(100vh);
@@ -360,7 +360,7 @@
             100% { transform: translateX(100%) translateY(100%) rotate(45deg); opacity: 0; }
         }
 
-        /* Skills Grid */
+        /* Skills Grid - CENTRADO MEJORADO */
         .skills-grid {
             display: grid;
             grid-template-columns: repeat(2, 1fr);
@@ -377,6 +377,9 @@
             padding: 2rem;
             border: 1px solid rgba(0, 255, 65, 0.3);
             box-shadow: 0 0 20px rgba(0, 0, 0, 0.8), inset 0 0 20px rgba(0, 255, 65, 0.05);
+            display: flex;
+            flex-direction: column;
+            align-items: center; /* Centra horizontalmente */
         }
 
         .skill-category h3 {
@@ -386,12 +389,16 @@
             color: #39ff14;
             font-weight: 700;
             text-shadow: 0 0 15px #39ff14;
+            text-align: center; /* Centra el título */
         }
 
         .skills-list {
             display: flex;
             flex-wrap: wrap;
             gap: 1rem;
+            justify-content: center; /* Centra todas las tags */
+            align-items: center;
+            width: 100%;
         }
 
         .skill-tag {
@@ -405,9 +412,11 @@
             transition: all 0.3s ease;
             display: flex;
             align-items: center;
+            justify-content: center; /* Centra el contenido dentro de cada tag */
             gap: 0.5rem;
             animation: matrixPulse 4s infinite;
             text-shadow: 0 0 5px #00ff41;
+            text-align: center; /* Centra el texto */
         }
 
         .skill-tag:nth-child(even) {
