--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
             color: #00ff41;
             font-family: 'Orbitron', monospace;
             font-size: 16px;
-            opacity: 0.15; /* Reducido de 0.60 a 0.15 para más transparencia */
+            opacity: 0.35; /* Punto medio entre 0.15 y 0.60 */
             animation: matrixRain 12s infinite linear;
             user-select: none;
-            text-shadow: 0 0 2px #00ff41; /* Reducido el brillo */
+            text-shadow: 0 0 3px #00ff41; /* Un poco más de brillo */
         }
 
         @keyframes matrixRain {
@@ -49,10 +49,10 @@
                 opacity: 0;
             }
             10% {
-                opacity: 0.2; /* Reducido de 0.8 a 0.2 */
+                opacity: 0.45; /* Punto medio para la animación */
             }
             90% {
-                opacity: 0.2; /* Reducido de 0.8 a 0.2 */
+                opacity: 0.45; /* Punto medio para la animación */
             }
             100% {
                 transform: translateY(100vh);
@@ -626,6 +626,8 @@
                         <span class="skill-tag"><i class="fab fa-js-square"></i> JavaScript</span>
                         <span class="skill-tag"><i class="fab fa-react"></i> React</span>
                         <span class="skill-tag"><i class="fab fa-python"></i> Python</span>
+                        <span class="skill-tag"><i class="fas fa-code"></i> C++</span>
+                        <span class="skill-tag"><i class="fab fa-microsoft"></i> C#</span>
                         <span class="skill-tag"><i class="fas fa-code"></i> TypeScript</span>
                         <span class="skill-tag"><i class="fab fa-php"></i> PHP</span>
                         <span class="skill-tag"><i class="fab fa-node-js"></i> Node.js</span>
