--- a/index.html
+++ b/index.html
@@ -105,8 +105,6 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            font-size: 4rem;
-            color: #00ff41;
             animation: profileGlow 3s ease-in-out infinite alternate;
         }
 
@@ -115,6 +113,77 @@
             height: 100%;
             object-fit: cover;
             filter: brightness(0.8) contrast(1.2) hue-rotate(90deg);
+        }
+
+        /* Avatar 3D Container */
+        .avatar-3d-container {
+            width: 100%;
+            height: 100%;
+            position: relative;
+            border-radius: 50%;
+            overflow: hidden;
+        }
+
+        #avatar3d {
+            width: 100%;
+            height: 100%;
+            border-radius: 50%;
+            cursor: pointer;
+        }
+
+        .avatar-loading {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            color: #00ff41;
+            font-size: 1rem;
+            text-align: center;
+            z-index: 10;
+        }
+
+        .loading-spinner {
+            width: 40px;
+            height: 40px;
+            border: 3px solid rgba(0, 255, 65, 0.3);
+            border-top: 3px solid #00ff41;
+            border-radius: 50%;
+            animation: spin 1s linear infinite;
+            margin: 0 auto 10px;
+        }
+
+        @keyframes spin {
+            0% { transform: rotate(0deg); }
+            100% { transform: rotate(360deg); }
+        }
+
+        /* Efectos para el avatar 3D */
+        .avatar-3d-container::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background: linear-gradient(45deg, 
+                transparent 30%, 
+                rgba(0, 255, 65, 0.1) 50%, 
+                transparent 70%);
+            border-radius: 50%;
+            z-index: 5;
+            pointer-events: none;
+            animation: shimmer 3s ease-in-out infinite;
+        }
+
+        @keyframes shimmer {
+            0%, 100% { 
+                transform: rotate(0deg);
+                opacity: 0.3;
+            }
+            50% { 
+                transform: rotate(180deg);
+                opacity: 0.8;
+            }
         }
 
         @keyframes profileGlow {
@@ -540,8 +609,14 @@
     <section class="hero" id="home">
         <div class="hero-content">
             <div class="profile-photo">
-                <!-- Aquí puedes cambiar por tu foto: <img src="tu-foto.jpg" alt="Daniela Monge"> -->
-                <i class="fas fa-user-circle"></i>
+                <!-- Avatar 3D de Ready Player Me -->
+                <div class="avatar-3d-container">
+                    <div class="avatar-loading" id="avatarLoading">
+                        <div class="loading-spinner"></div>
+                        <div>Cargando avatar...</div>
+                    </div>
+                    <canvas id="avatar3d"></canvas>
+                </div>
             </div>
             <h1>Daniela Monge</h1>
             <h2>Ingeniería en Desarrollo de Software</h2>
