--- a/index.html
+++ b/index.html
@@ -609,14 +609,8 @@
     <section class="hero" id="home">
         <div class="hero-content">
             <div class="profile-photo">
-                <!-- Avatar 3D de Ready Player Me -->
-                <div class="avatar-3d-container">
-                    <div class="avatar-loading" id="avatarLoading">
-                        <div class="loading-spinner"></div>
-                        <div>Cargando avatar...</div>
-                    </div>
-                    <canvas id="avatar3d"></canvas>
-                </div>
+                <!-- Tu avatar de Ready Player Me -->
+                <img src="https://models.readyplayer.me/68d2034fc9891f037b14d814.png" alt="Daniela Monge Avatar">
             </div>
             <h1>Daniela Monge</h1>
             <h2>Ingeniería en Desarrollo de Software</h2>
