--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             width: 100%;
             height: 100%;
             object-fit: cover;
-            filter: brightness(0.8) contrast(1.2) hue-rotate(90deg);
+            filter: brightness(1.1) contrast(1.1);
         }
 
         /* Avatar 3D Container */
@@ -201,7 +201,7 @@
             font-weight: 900;
             margin-bottom: 1rem;
             color: #00ff41;
-            text-shadow: 0 0 10px #00ff41, 0 0 20px #00ff41;
+            text-shadow: 0 0 5px #00ff41, 0 0 10px #00ff41;
             animation: textGlow 3s ease-in-out infinite alternate;
         }
 
@@ -222,14 +222,20 @@
             color: #90EE90;
             font-weight: 400;
             text-shadow: 0 0 5px #90EE90;
+            background: rgba(0, 0, 0, 0.7);
+            backdrop-filter: blur(10px);
+            padding: 1.5rem 2rem;
+            border-radius: 15px;
+            border: 1px solid rgba(0, 255, 65, 0.2);
+            box-shadow: 0 0 20px rgba(0, 0, 0, 0.5), inset 0 0 20px rgba(0, 255, 65, 0.05);
         }
 
         @keyframes textGlow {
             from { 
-                text-shadow: 0 0 10px #00ff41, 0 0 20px #00ff41;
+                text-shadow: 0 0 5px #00ff41, 0 0 10px #00ff41;
             }
             to { 
-                text-shadow: 0 0 15px #00ff41, 0 0 30px #00ff41, 0 0 40px #00ff41;
+                text-shadow: 0 0 8px #00ff41, 0 0 15px #00ff41, 0 0 20px #00ff41;
             }
         }
 
