--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 nuevas tecnologías y enfrentar desafíos que me permitan crecer profesionalmente.
             </p>
             <div class="social-links">
-                <a href="www.linkedin.com/in/daniela-monge" target="_blank">
+                <a href="https://www.linkedin.com/in/daniela-monge" target="_blank">
                     <i class="fab fa-linkedin-in"></i>
                 </a>
                 <a href="https://github.com/m0nge" target="_blank">
