--- a/index.html
+++ b/index.html
@@ -25,13 +25,6 @@
             <div class="profile-photo">
                 <img src="https://models.readyplayer.me/68d2034fc9891f037b14d814.png" alt="Daniela Monge Avatar">
             </div>
-            <h1>Daniela Monge</h1>
-            <h2>Ingeniería en Desarrollo de Software</h2>
-            <p>
-                Soy una apasionada desarrolladora de software que encuentra en la programación una forma 
-                de crear soluciones innovadoras y transformar ideas en realidad. Me encanta explorar 
-                nuevas tecnologías y enfrentar desafíos que me permitan crecer profesionalmente.
-            </p>
             <div class="social-links">
                 <a href="https://www.linkedin.com/in/daniela-monge" target="_blank">
                     <i class="fab fa-linkedin-in"></i>
@@ -39,6 +32,50 @@
                 <a href="https://github.com/m0nge" target="_blank">
                     <i class="fab fa-github"></i>
                 </a>
+            </div>
+            <h1>Daniela Monge</h1>
+            <h2>Ingeniería en Desarrollo de Software</h2>
+            <p>
+                Soy una apasionada desarrolladora de software que encuentra en la programación una forma 
+                de crear soluciones innovadoras y transformar ideas en realidad. Me encanta explorar 
+                nuevas tecnologías y enfrentar desafíos que me permitan crecer profesionalmente.
+            </p>
+        </div>
+    </section>
+
+    <!-- Skills -->
+    <section class="section" id="skills">
+        <div class="container">
+            <h2 class="fade-in">Skills & Herramientas</h2>
+            <div class="skills-grid">
+                <div class="skill-category fade-in">
+                    <h3>Lenguajes</h3>
+                    <div class="skills-list">
+                        <span class="skill-tag"><i class="fab fa-html5"></i> HTML</span>
+                        <span class="skill-tag"><i class="fab fa-css3-alt"></i> CSS</span>
+                        <span class="skill-tag"><i class="fab fa-js-square"></i> JavaScript</span>
+                        <span class="skill-tag"><i class="fab fa-react"></i> React</span>
+                        <span class="skill-tag"><i class="fab fa-python"></i> Python</span>
+                        <span class="skill-tag"><i class="fas fa-code"></i> C++</span>
+                        <span class="skill-tag"><i class="fab fa-microsoft"></i> C#</span>
+                        <span class="skill-tag"><i class="fas fa-code"></i> TypeScript</span>
+                        <span class="skill-tag"><i class="fab fa-php"></i> PHP</span>
+                        <span class="skill-tag"><i class="fab fa-node-js"></i> Node.js</span>
+                        <span class="skill-tag"><i class="fas fa-database"></i> SQL</span>
+                    </div>
+                </div>
+
+                <div class="skill-category fade-in">
+                    <h3>Herramientas</h3>
+                    <div class="skills-list">
+                        <span class="skill-tag"><i class="fab fa-git-alt"></i> Git</span>
+                        <span class="skill-tag"><i class="fab fa-github"></i> GitHub</span>
+                        <span class="skill-tag"><i class="fas fa-terminal"></i> Terminal</span>
+                        <span class="skill-tag"><i class="fas fa-code"></i> VSCode</span>
+                        <span class="skill-tag"><i class="fab fa-npm"></i> NPM</span>
+                        <span class="skill-tag"><i class="fab fa-wordpress"></i> WordPress</span>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
@@ -111,47 +148,26 @@
                         </a>
                     </div>
                 </div>
-            </div>
-        </div>
-    </section>
 
-    <!-- Skills -->
-    <section class="section" id="skills">
-        <div class="container">
-            <h2 class="fade-in">Skills & Herramientas</h2>
-            <div class="skills-grid">
-                <div class="skill-category fade-in">
-                    <h3>Lenguajes</h3>
-                    <div class="skills-list">
-                        <span class="skill-tag"><i class="fab fa-html5"></i> HTML</span>
-                        <span class="skill-tag"><i class="fab fa-css3-alt"></i> CSS</span>
-                        <span class="skill-tag"><i class="fab fa-js-square"></i> JavaScript</span>
-                        <span class="skill-tag"><i class="fab fa-react"></i> React</span>
-                        <span class="skill-tag"><i class="fab fa-python"></i> Python</span>
-                        <span class="skill-tag"><i class="fas fa-code"></i> C++</span>
-                        <span class="skill-tag"><i class="fab fa-microsoft"></i> C#</span>
-                        <span class="skill-tag"><i class="fas fa-code"></i> TypeScript</span>
-                        <span class="skill-tag"><i class="fab fa-php"></i> PHP</span>
-                        <span class="skill-tag"><i class="fab fa-node-js"></i> Node.js</span>
-                        <span class="skill-tag"><i class="fas fa-database"></i> SQL</span>
+                <div class="project-card fade-in">
+                    <div class="project-image">
+                        <img src="https://i.postimg.cc/LswVPZY5/imagen-2025-12-27-195753035.png" alt="Strange-Hangman">
                     </div>
-                </div>
-
-                <div class="skill-category fade-in">
-                    <h3>Herramientas</h3>
-                    <div class="skills-list">
-                        <span class="skill-tag"><i class="fab fa-git-alt"></i> Git</span>
-                        <span class="skill-tag"><i class="fab fa-github"></i> GitHub</span>
-                        <span class="skill-tag"><i class="fas fa-terminal"></i> Terminal</span>
-                        <span class="skill-tag"><i class="fas fa-code"></i> VSCode</span>
-                        <span class="skill-tag"><i class="fab fa-npm"></i> NPM</span>
-                        <span class="skill-tag"><i class="fab fa-wordpress"></i> WordPress</span>
+                    <h3>Strange Hangman</h3>
+                    <p>Juego de ahorcado temático de Stranger Things con JavaScript vanilla. Incluye efectos visuales retro-ochentas, sistema de vidas, animaciones de caracteres y diseño responsive inspirado en la estética nostálgica de la serie.</p>
+                    <div class="project-links">
+                        <a href="https://github.com/m0nge/StrangerHangman" target="_blank" class="github-link">
+                            <i class="fab fa-github"></i> GitHub
+                        </a>
+                        <a href="https://m0nge.github.io/StrangerHangman/" target="_blank" class="demo-link">
+                            <i class="fas fa-eye"></i> Ver Demo
+                        </a>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-
+    
     <script src="assets/js/main.js"></script>
 </body>
 </html>
