--- a/index.html
+++ b/index.html
@@ -167,7 +167,133 @@
             </div>
         </div>
     </section>
-    
+
+<!-- Certificaciones -->
+<section class="section" id="certifications">
+    <div class="container">
+        <h2 class="fade-in">Certificaciones</h2>
+        <div class="certifications-grid">
+            <div class="certification-card fade-in">
+                <div class="certification-image">
+                    <img src="https://i.postimg.cc/V6F3N9gx/imagen-2025-12-27-205407202.png" alt="Google IT Support">
+                </div>
+                <h3>Google IT Support</h3>
+                <p class="certification-org">Google / Coursera</p>
+                <div class="certification-link">
+                    <a href="https://www.coursera.org/account/accomplishments/specialization/UAU7EWVQK18Z" target="_blank" class="credential-link">
+                        <i class="fas fa-certificate"></i> Ver Credencial
+                    </a>
+                </div>
+            </div>
+
+            <div class="certification-card fade-in">
+                <div class="certification-image">
+                    <img src="https://i.postimg.cc/W347MMj9/imagen-2025-12-27-210031812.png" alt="Power User">
+                </div>
+                <h3>Becoming a Power User</h3>
+                <p class="certification-org">Google / Coursera</p>
+                <div class="certification-link">
+                    <a href="https://www.coursera.org/account/accomplishments/records/3QBS5WG7LMRF" target="_blank" class="credential-link">
+                        <i class="fas fa-certificate"></i> Ver Credencial
+                    </a>
+                </div>
+            </div>
+
+            <div class="certification-card fade-in">
+                <div class="certification-image">
+                    <img src="https://i.postimg.cc/y6D8Gk8w/imagen-2025-12-27-211909450.png" alt="Bits and Bytes of Computer Networking">
+                </div>
+                <h3>The Bits and Bytes of Computer Networking</h3>
+                <p class="certification-org">Google / Coursera</p>
+                <div class="certification-link">
+                    <a href="https://www.coursera.org/account/accomplishments/records/UD70EDFZQIUG" target="_blank" class="credential-link">
+                        <i class="fas fa-certificate"></i> Ver Credencial
+                    </a>
+                </div>
+            </div>
+
+            <div class="certification-card fade-in">
+                <div class="certification-image">
+                    <img src="https://i.postimg.cc/NFVwzVxR/imagen-2026-01-25-194840871.png" alt="Power User">
+                </div>
+                <h3>Foundations in Data</h3>
+                <p class="certification-org">Google / Coursera</p>
+                <div class="certification-link">
+                    <a href="https://www.coursera.org/account/accomplishments/verify/DWCXSS4K4K67" target="_blank" class="credential-link">
+                        <i class="fas fa-certificate"></i> Ver Credencial
+                    </a>
+                </div>
+            </div>
+
+            <div class="certification-card fade-in">
+                <div class="certification-image">
+                    <img src="https://i.postimg.cc/tgMQTwKX/imagen-2026-01-25-195620172.png" alt="Power User">
+                </div>
+                <h3>Technical Support Fundamentals</h3>
+                <p class="certification-org">Google / Coursera</p>
+                <div class="certification-link">
+                    <a href="https://www.coursera.org/account/accomplishments/verify/T5899DMWHOHH" target="_blank" class="credential-link">
+                        <i class="fas fa-certificate"></i> Ver Credencial
+                    </a>
+                </div>
+            </div>
+
+            <div class="certification-card fade-in">
+                <div class="certification-image">
+                    <img src="https://i.postimg.cc/wMzWTkTP/imagen-2026-01-25-195857844.png" alt="Power User">
+                </div>
+                <h3>System Administration and IT Infrastructure Services</h3>
+                <p class="certification-org">Google / Coursera</p>
+                <div class="certification-link">
+                    <a href="https://www.coursera.org/account/accomplishments/verify/RZ18KW62PD0N" target="_blank" class="credential-link">
+                        <i class="fas fa-certificate"></i> Ver Credencial
+                    </a>
+                </div>
+            </div>
+
+            <div class="certification-card fade-in">
+                <div class="certification-image">
+                    <img src="https://i.postimg.cc/3RxNMsgT/imagen-2026-01-25-200723230.png" alt="Power User">
+                </div>
+                <h3>IT Security: Defense against the digital dark arts</h3>
+                <p class="certification-org">Google / Coursera</p>
+                <div class="certification-link">
+                    <a href="https://www.coursera.org/account/accomplishments/verify/KYYSREK28MYJ" target="_blank" class="credential-link">
+                        <i class="fas fa-certificate"></i> Ver Credencial
+                    </a>
+                </div>
+            </div>
+
+            <div class="certification-card fade-in">
+                <div class="certification-image">
+                    <img src="https://i.postimg.cc/kgCt1hYk/imagen-2026-01-25-200944027.png" alt="Power User">
+                </div>
+                <h3>Accelerate Your Job Search with AI</h3>
+                <p class="certification-org">Google / Coursera</p>
+                <div class="certification-link">
+                    <a href="https://www.coursera.org/account/accomplishments/verify/6DD3LD4E8GPC" target="_blank" class="credential-link">
+                        <i class="fas fa-certificate"></i> Ver Credencial
+                    </a>
+                </div>
+            </div>
+
+            <div class="certification-card fade-in">
+                <div class="certification-image">
+                    <img src="https://i.postimg.cc/SxXCzz5h/imagen-2026-01-25-205213015.png" alt="Power User">
+                </div>
+                <h3>Informática Forense</h3>
+                <p class="certification-org">Academia Progenios</p>
+                <div class="certification-link">
+                    <a href="https://credsverse.com/credentials/9c6c8c70-d019-4bc9-b423-1da632e40f8f" target="_blank" class="credential-link">
+                        <i class="fas fa-certificate"></i> Ver Credencial
+                    </a>
+                </div>
+            </div>
+            
+        </div>
+    </div>
+</section>
+
     <script src="assets/js/main.js"></script>
 </body>
 </html>
